<resources>
    <string name="app_name">Herbarium</string>
    <string name="home_btn_tips"> \t <b>Tips on taking pictures</b> \n \t Tap here to learn more</string>
    <string name="titleDescription"><b>Description</b></string>
    <string name="titleBenefits"><b>Benefits and Treatment</b></string>
    <string name="titleUse"><b>Preparation and Use</b></string>
    <string name="titleMore"><b>More Information</b></string>
    <string name="title_activity_akapulko">Akapulko</string>
    <string name="headerAkapulko">
        <b>Plant Name:</b> Akapulko \n
        <b>Scientific Name:</b> Senna Alata \n
        <b>Family:</b> Leguminosae \n
    </string>
    <string name="titleDescriptionAkapulko"><b>Description</b></string>
    <string name="large_text1">Also known as ringworm bush, the scientific name of akapulko is Cassia alata or Senna alata. It is basically a shrub that is found all throughout the Philippines under different names, depending on the region. \n
    </string>
    <string name="titleBenefitsAkapulko"><b>Benefits and Treatment</b></string>
    <string name="large_text2">● <b>External Use:</b>
Treatment of skin diseases:
\n Tinea infections, insect bites, ringworms, eczema, scabies and itchiness. \n
● Mouthwash in stomatitis \n\n

● <b>Internal use:</b>
Expectorant for bronchitis and dyspnoea \n
● Alleviation of asthma symptoms \n
● Used as diuretic and purgative \n
● For cough and fever \n
● As a laxative to expel intestinal parasites and other stomach problems. \n\n

<b>Note:</b> A strong decoction of Akapulko leaves is an abortifacient. Pregnant women should not take the decoction of the leaves or any part of this plant. \n

    </string>
    <string name="titleUseAkapulko"><b>Preparation and Use:</b></string>
    <string name="large_text3">● For external use, pound the leaves of the Akapulko plant, squeeze the juice and apply on affected areas. \n\n

● As the expectorant for bronchitis and dyspnoea, drink decoction (soak and boil for 10 to 15 minutes) of Akapulko leaves. The same preparation may be used as a mouthwash, stringent, and wash for eczema. \n\n

● As laxative, cut the plant parts (roots, flowers, and the leaves) into a manageable size then prepare a decoction Note: The decoction loses its potency if not used for a long time. Dispose leftovers after one day. \n\n

● The pounded leaves of Akapulko have purgative functions, specifically against ringworms. \n\n

It should be noted that the pounded leaves of this plant may be applied thinly on the affected part twice a day. Marked improvement may be expected after two to three weeks of continuous application to the affected area(s) where the prepared Akapulko leaves were applied.

    </string>
    <string name="txt_title_more"><b>More Information:</b></string>
    <string name="akapulko_wiki"><a href="https://en.wikipedia.org/wiki/Senna_alata"> Wikipedia</a></string>
    <string name="TOSp1">This End-User License Agreement (“EULA”) constitutes an agreement between you and Herbarium. (herein referred to as the “Owner”) with regard to the application for Mobile Phones (herein referred to as “Apps”). By installing the Software, you are agreeing to be bound by the terms of this license agreement.
Your use of the Apps (as specified below) is subject to the terms and conditions set forth in this EULA. If you do not accept the terms of this EULA, do not install or use the Software.
    </string>
    <string name="tosH1"><b>LICENSE\n</b></string>
    <string name="TOSp2">The Software is licensed, not sold. The Owner grants you a non-exclusive, non-transferable, non-sublicensable, limited right and license to use one copy of the Software for your personal non-commercial use on a single device. The rights granted herein are subject to your compliance with this EULA. The Software is being licensed to you and you hereby acknowledge that no title or ownership in the Software is being transferred or assigned and this EULA is not to be construed as a sale of any rights in the Software.\n
    </string>
    <string name="tosH2"><b>RESTRICTIONS OF USE\n</b></string>
    <string name="TOSp3">Unless the Owner has authorized you to distribute the Software, you shall not make or distribute copies of the Software or transfer the Software from one device to another. You shall not decompile, reverse engineer, disassemble, include in other software, or translate the Software, or use the Software for any commercial purposes. You shall not modify, alter, change or otherwise make any modification to the Software or create derivative works based upon the Software. You shall not rent, lease, resell, sub-license, assign, distribute or otherwise transfer the Software or this license. Any attempt to do so shall be void and of no effect.\n
    </string>
    <string name="tosH3"><b>COPYRIGHT\n</b></string>
    <string name="TOSp4">You acknowledge that no title to the intellectual property in the Software is transferred to you. You further acknowledge that title and full ownership rights to the Software, and you will not acquire any rights to the Software. You shall not remove or obscure the Owner’s copyright, trade mark or other proprietary notices from any of the materials contained in this package or downloaded together with the Software.\n
    </string>
    <string name="tosH4"><b>DISCLAIMER OF WARRANTY\n</b></string>
    <string name="TOSp5">The Software is provided “AS IS”, without warranty of any kind. We disclaim and make no express or implied warranties and specifically disclaim the warranties of merchantability, fitness for a particular purpose and non-infringement of third-party rights. The entire risk as to the quality and performance of the Software is with you. We do not warrant that the functions contained in the Software will meet your requirements or that the operation of the Software will be error-free.\n
    </string>
    <string name="tosH5"><b>LIMITATION OF LIABILITY\n</b></string>
    <string name="TOSp6">In no event will the Owner be liable for special, incidental or consequential damages resulting from possession, access, use or malfunction of the Software, including but not limited to damages to property, loss of goodwill, computer or mobile device malfunction and, to the extent permitted by law, damages for personal injuries, property damage, lost profits or punitive damages from any causes of action arising out of or related to this EULA or the Software, whether arising in tort (including negligence), contract, strict liability or otherwise and whether or not the Owner has been advised of the possibility of such damages.
Because some states/countries do not allow certain limitations of liability, this limitation of liability shall apply to the fullest extent permitted by law in the applicable jurisdiction. This limitation of liability shall not be applied solely to the extent that any specific provision of this limitation of liability is prohibited by any federal, state, or municipal law, which cannot be pre-empted. This EULA gives you specific legal rights, and you may have other rights that vary from jurisdiction to jurisdiction. In no event shall the Owner’s liability for all damages (except as required by applicable law) exceed the actual price paid by you for use of the Software.\n
    </string>
    <string name="headerSambong">
        <b>Plant Name:</b> Sambong \n
        <b>Scientific Name:</b> Blumea balsamifera \n
        <b>Family:</b> Compositae \n
    </string>
    <string name="descriptionSambong"> Sambong is one herbal medicine (of ten) approved by the Philippine Department of Health (DOH) as an alternative medicine in treating particular disorders. It is known in the Visayas as bukadkad and as subsob in Ilocos. The plant is a strongly aromatic herb that grows tall and erect. Its height ranges from 1.5 to 3 meters, with stems that grow for up to 2.5 centimeters. It is an anti-urolithiasis and works as a diuretic. \n
    </string>
    <string name="benefitsSambong"> ● Good as a diuretic agent \n\n
● Effective in the dissolving kidney stones \n\n
● Aids in treating hypertension and rheumatism \n\n
● Treatment of colds, cough and fever \n\n
● Anti-diarrheic properties \n\n
● Anti-gastralgic properties \n\n
● Helps remove worms, boils \n\n
● Relief of stomach pains \n\n
● Treats dysentery, sore throat \n\n
● Decoction mixed in bathing water for new mothers. \n

    </string>
    <string name="useSambong"> ● A decoction (boil in water) of Sambong leaves is like tea and you drink a glass 3 or 4 times a day. \n\n
● The leaves can also be crushed or pounded and mixed with coconut oil. \n\n
● For headaches, apply crushed and pounded leaves on the forehead and temples. \n\n
● Decoction of leaves is used as a sponge bath. \n\n
● Decoction of the roots, on the other hand, is to be taken in as a cure for fever. \n

    </string>
    <string name="moreSambong"><a href="https://en.wikipedia.org/wiki/Blumea_balsamifera"> Wikipedia</a></string>
    <string name="guideHeader"><b>How to use Herbarium:\n</b>
    To identify a Medicinal plant, simply take a picture of the plant leaf or select a plant leaf picture from your "Gallery" and Herbarium will identify it instantly! \n\n

    <b>Tips on taking pictures:</b>\n
    A clear shot of plants leaf with proper angle and distance will help Herbarium identify Medicinal plants more accurately.\n\n
    </string>
    <string name="step1"> <b>1. Single leaf only\n</b>
    DO NOT put so much object in the photo, you only need one leaf.
    </string>
    <string name="step2"> <b>2. Bright and clear\n</b>
   	Make sure the picture you take or select in the gallery is Bright and Clear enough to identify. You\'ll have better result from that.
    </string>
    <string name="step3"> <b>3. In the middle rule\n</b>
   Put your leaf into the center of the frame
    </string>
    <string name="step4"> <b>4. Stay Original\n</b>
   DO NOT edit or adjust any effect on your photo, you only need the original one.
    </string>
</resources>