<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".GuideActivity"
    tools:showIn="@layout/guide_scrolling">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        >

        <TextView
            android:id="@+id/guideHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/guideHeader"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/step1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/step1"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideHeader"
            />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:background="@drawable/guide1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step1"
            />

        <TextView
            android:id="@+id/step2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/step2"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img1"
            />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:background="@drawable/guide2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step2"
            />

        <TextView
            android:id="@+id/step3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/step3"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img2"
            />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:background="@drawable/guide3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step3"
            />

        <TextView
            android:id="@+id/step4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/step4"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img3"
            />

        <ImageView
            android:id="@+id/img4"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:background="@drawable/guide4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step4"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>